# admin_favorite

./: .gitignore  .travis.yml  Dockerfile  LICENSE  Procfile  README.md  db.sqlite3  index.md  manage.py  requirements.txt  setup.cfg  setup.py
admin_favorite/: __init__.py  apps.py  models.py  urls.py  views.py
admin_favorite/migrations/: 0001_initial.py
admin_favorite/templates/admin/: base.html  favorite_list.html  index.html
continent/: admin.py  apps.py  models.py
continent/migrations/: 0001_initial.py
country/: admin.py  models.py
country/migrations/: 0001_initial.py
dj_favorite_wrap/: asgi.py  settings.py  urls.py  wsgi.py
docs/source/: conf.py  config.py  contents.rst  people.rst
templates/admin/: app_list.html  favorite_list.html
tourism/: admin.py  apps.py  models.py
tourism/migrations/: 0001_initial.py
